<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/postText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/postTitleInstructor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/post_title"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/postNameInstructor"
                android:text="@string/post_username"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/postTitleInstructor"
                app:layout_constraintStart_toStartOf="@id/postTitleInstructor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/postLevelInstructor"
                android:text="@string/post_level"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/postNameInstructor"
                app:layout_constraintStart_toStartOf="@id/postNameInstructor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/postDescriptionInstructor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/postLevelInstructor"
                app:layout_constraintStart_toStartOf="@id/postLevelInstructor"
                android:text="@string/post_description"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/sendMessageToStudentButton"
            android:drawableLeft="@drawable/ic_send_message"
            android:background="@drawable/custom_less_rounded_button"
            android:text="@string/send_message_to_student"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:paddingHorizontal="10dp"
            android:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>