<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventActivity">

    <EditText
        android:id="@+id/editEventSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_event_title"
        android:background="@drawable/custom_input"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="15dp"/>

    <EditText
        android:id="@+id/editEventPerson"
        android:hint="@string/input_event_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editEventSubject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/custom_input"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editEventDate"
        android:hint="@string/input_event_date"
        android:inputType="date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editEventPerson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editDateImage"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="10dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/custom_input"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/editDateImage"
        android:src="@drawable/ic_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/editEventDate"
        app:layout_constraintBottom_toBottomOf="@id/editEventDate"
        app:layout_constraintStart_toEndOf="@id/editEventDate"
        app:layout_constraintEnd_toEndOf="@id/editEventSubject"
        android:layout_marginEnd="10dp"
        app:layout_constraintHorizontal_bias="1"/>

    <EditText
        android:id="@+id/editEventTime"
        android:hint="@string/input_event_time"
        android:inputType="time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editEventDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editTimeImage"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="10dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/custom_input"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/editTimeImage"
        android:src="@drawable/ic_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/editEventTime"
        app:layout_constraintBottom_toBottomOf="@id/editEventTime"
        app:layout_constraintStart_toEndOf="@id/editEventTime"
        app:layout_constraintEnd_toEndOf="@id/editEventSubject"
        android:layout_marginEnd="10dp"
        app:layout_constraintHorizontal_bias="1"/>

    <Button
        android:id="@+id/updateEventButton"
        android:text="@string/update"
        android:background="@drawable/custom_rounded_button"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editEventTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="40dp"
        android:padding="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>